CbeerDev/objects/CBI_US_Item_Authorization_Feature__c.object
<CustomObject>
    <description>Custom Item Authorization &amp; Feature object to create and store Item Authorizations and Features that will be used by other connected sources</description>
    <fields>
        <fullName>AB_SELL_FLG__c</fullName>
        <label>AB Selling</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_all_Parent_Account_stores__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checkbox is checked, all child Accounts under Ultimate Parent Account will be automatically added as junction objects to the Item Auth/Feature</description>
        <label>Add all Parent Account stores</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRAND_CD__c</fullName>
        <label>Brand Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a record has been inactive for 1 year and is scheduled for deletion</description>
        <label>Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEATURE_PRICE__c</fullName>
        <label>Feature Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GTIN_NO__c</fullName>
        <label>Retailer UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASTER_PKG_CD__c</fullName>
        <label>Master Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASTER_SKU_CD__c</fullName>
        <label>Master SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MILLERCOORS_SELL_FLG__c</fullName>
        <label>Miller Coors Selling</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Groups__c</fullName>
        <label>Marketing Groups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NEW_SET_FLG__c</fullName>
        <label>New Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTES_TXT__c</fullName>
        <label>Additional Notes</label>
        <length>290</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NO_OF_DOORS__c</fullName>
        <label>Number of Doors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ON_MENU_FLG__c</fullName>
        <label>On Menu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLACEMENT__c</fullName>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Doors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cave</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RESET_PERIOD_BEGIN_DT_ID__c</fullName>
        <label>Reset Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RESET_PERIOD_END_DT_ID__c</fullName>
        <label>Reset Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_To_Codes__c</fullName>
        <label>Report To Codes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SET_PERIOD_BEGIN_DT_ID__c</fullName>
        <label>Set Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SET_PERIOD_END_DT_ID__c</fullName>
        <label>Set Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SET_TYPE__c</fullName>
        <label>Type of Set</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Defines status of Item Authorization or Feature</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Accounts__c</fullName>
        <label>Sub Accounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TDLinx_Store_Code__c</fullName>
        <formula>Ultimate_Parent__r.Store_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TDLinx Store Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TD_Linx_Code__c</fullName>
        <label>TD Linx Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE_DSC__c</fullName>
        <formula>IF(AND(ISPICKVAL(Type_CD__c, &quot;BE&quot;), RecordType.DeveloperName = &quot;Feature&quot;), &quot;Beer of the Month&quot;,
   IF(AND(ISPICKVAL(Type_CD__c, &quot;HH&quot;),RecordType.DeveloperName = &quot;Feature&quot;), &quot;Happy Hour&quot;,
      IF(AND(ISPICKVAL(Type_CD__c, &quot;LP&quot;),RecordType.DeveloperName = &quot;Feature&quot;), &quot;Every Day Low Price&quot;,
         IF(AND(ISPICKVAL(Type_CD__c, &quot;LT&quot;),RecordType.DeveloperName = &quot;Feature&quot;), &quot;Limited Time Only (LTO)&quot;,
            IF(AND(ISPICKVAL(Type_CD__c, &quot;be&quot;),RecordType.DeveloperName = &quot;Feature&quot;), &quot;Beer of the Month&quot;,
               IF(AND(ISPICKVAL(Type_CD__c, &quot;hh&quot;),RecordType.DeveloperName = &quot;Feature&quot;), &quot;Happy Hour&quot;,
                  IF(AND(ISPICKVAL(Type_CD__c, &quot;lp&quot;),RecordType.DeveloperName = &quot;Feature&quot;), &quot;Every Day Low Price&quot;,
                     IF(AND(ISPICKVAL(Type_CD__c, &quot;lt&quot;),RecordType.DeveloperName = &quot;Feature&quot;), &quot;Limited Time Only (LTO)&quot;,
IF(AND(ISPICKVAL(Type_CD__c, &quot;OS&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Authorized - Optional (Sell-In)&quot;,
   IF(AND(ISPICKVAL(Type_CD__c, &quot;SP&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Authorized - Select Planogram&quot;,
      IF(AND(ISPICKVAL(Type_CD__c, &quot;BM&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Brand Mandated - Any Format&quot;,
         IF(AND(ISPICKVAL(Type_CD__c, &quot;CM&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Corporate Mandate&quot;,
            IF(AND(ISPICKVAL(Type_CD__c, &quot;NA&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Not Applicable&quot;,
               IF(AND(ISPICKVAL(Type_CD__c,&quot;PA&quot;), RecordType.DeveloperName = &quot;Item_Authorization&quot;),&quot;Pending Authorization&quot;,
                  IF(AND(ISPICKVAL(Type_CD__c, &quot;PN&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Presented - Not Authorized&quot;,
                     IF(AND(ISPICKVAL(Type_CD__c, &quot;TB&quot;), RecordType.DeveloperName = &quot;Item_Authorization&quot;),&quot;To be Presented&quot;,
                        IF(AND(ISPICKVAL(Type_CD__c, &quot;os&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Authorized - Optional (Sell-In)&quot;,
                           IF(AND(ISPICKVAL(Type_CD__c, &quot;sp&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Authorized - Select Planogram&quot;,
                             IF(AND(ISPICKVAL(Type_CD__c, &quot;bm&quot;), RecordType.DeveloperName = &quot;Item_Authorization&quot;),&quot;Brand Mandated - Any Format&quot;,
                                 IF(AND(ISPICKVAL(Type_CD__c, &quot;cm&quot;), RecordType.DeveloperName = &quot;Item_Authorization&quot;),&quot;Corporate Mandate&quot;,
                                    IF(AND(ISPICKVAL(Type_CD__c, &quot;na&quot;), RecordType.DeveloperName = &quot;Item_Authorization&quot;),&quot;Not Applicable&quot;,
                                      IF(AND(ISPICKVAL(Type_CD__c, &quot;pa&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Pending Authorization&quot;,
                                               IF(AND(ISPICKVAL(Type_CD__c, &quot;pn&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;Presented - Not Authorized&quot;,
                                                       IF(AND(ISPICKVAL(Type_CD__c, &quot;tb&quot;),RecordType.DeveloperName = &quot;Item_Authorization&quot;), &quot;To be Presented&quot;, null))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_CD__c</fullName>
        <label>Type Code</label>
        <picklist>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CBI_US_Collections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>CBBD US Item Authorization &amp; Feature</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFA -{0000}</displayFormat>
        <label>CBBD US Item Authorization &amp; Feature</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBBD US Item Authorizations &amp; Features</pluralLabel>
    <recordTypes>
        <fullName>Feature</fullName>
        <active>true</active>
        <description>Record Type for Feature</description>
        <label>Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_Authorization</fullName>
        <active>true</active>
        <description>Record Type For Item Authorizations</description>
        <label>Item Authorization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_Account_Validation</fullName>
        <active>true</active>
        <description>Ensures that the lookup to the parent account will only apply to the parentid on the account object</description>
        <errorConditionFormula>Ultimate_Parent__r.Est_un_compte_parent__c  = false</errorConditionFormula>
        <errorDisplayField>Ultimate_Parent__c</errorDisplayField>
        <errorMessage>The Account entered is not a Parent Account, Please try again.</errorMessage>
    </validationRules>
</CustomObject>